--- a/index.html
+++ b/index.html
@@ -606,9 +606,15 @@
     <footer class="footer">
         <div class="container footer-content">
             <a href="#" class="logo">ROSSI</a>
-            <p>&copy; 2025 Rossi Soluciones Informáticas. Todos los derechos reservados.</p>
+            <p>
+            Diseño conceptual basado en el sitio web real: 
+            <a href="https://www.rossisoluciones.com.ar/" target="_blank" rel="noopener noreferrer">
+                rossisoluciones.com.ar
+            </a>
+        </p>
         </div>
     </footer>
 
 </body>
+
 </html>
