--- a/productos.html
+++ b/productos.html
@@ -374,10 +374,16 @@
     <footer class="footer">
         <div class="container footer-content">
             <a href="index.html" class="logo">ROSSI</a>
-            <p>&copy; 2025 Rossi Soluciones Informáticas. Todos los derechos reservados.</p>
+            <p>
+            Diseño conceptual basado en el sitio web real: 
+            <a href="https://www.rossisoluciones.com.ar/" target="_blank" rel="noopener noreferrer">
+                rossisoluciones.com.ar
+            </a>
+        </p>
         </div>
     </footer>
     
 </body>
 
 </html>
+
